<resources>
    <string name="app_name" translatable="false">ChalChap5</string>
    <string name="detail">Detail</string>
    <string name="register">Daftar</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukan_konfirmasi_password">Masukan Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="belum_punya_akun">Belum Punya akun?</string>
    <string name="username">Nama Panggilan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="update">Perbarui</string>
    <string name="logout">Keluar</string>
    <string name="masukkan_password">Masukan Password</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="welcome">WELCOME</string>
    <string name="profile">Profile</string>
</resources>