<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfilActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="104dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:id="@+id/username"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/uss"
            android:backgroundTint="#DEFDFC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/username"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/Nama"
            android:backgroundTint="#DEFDFC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nama_lengkap"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/Email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/TglLahir"
            android:backgroundTint="#DEFDFC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tanggal_lahir"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints=""
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/RePass"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/Alamat"
            android:layout_width="match_parent"
            android:backgroundTint="#DEFDFC"
            android:layout_height="match_parent"
            android:hint="@string/alamat"
            tools:ignore="SpeakableTextPresentCheck"
            android:autofillHints=""
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Update"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="93dp"
        android:backgroundTint="#B0DAFF"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:text="@string/update" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Update"
        android:layout_alignParentStart="true"
        android:layout_marginStart="92dp"
        android:backgroundTint="#B0DAFF"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/logout" />
</RelativeLayout>