<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.HomeActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Home"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:text="@string/home"
        android:layout_below="@id/welcome"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@id/Home"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/imageView"
        app:srcCompat="@drawable/ic_fav_24"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/baseline_person_24"
        android:contentDescription="@string/todo" />

</RelativeLayout>
